--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	form(role="form" name="login" action="/" method="get")
+	form(role="form" name="login" action="/api/auth/login" method="post")
 			input.form-control(type="text" name="username" placeholder="Username")
 			input.form-control(type="password" name="password" placeholder="Password")
 
