Station client-side model and simple rendering:

--- a/app/views/templates/site.jade
+++ b/app/views/templates/site.jade
@@ -1,4 +1,13 @@
 .container
-	h1 Hello, world!
-	p.lead Hello there, guys.
-	a.btn.btn-lg.btn-success Hi!
+	h1  Stevie The Whale
+	p.lead Hello there, guys! My name is Stevie!
+
+	ul.nav.nav-pills.nav-justified
+		li 
+			a(href="#{jade.url('stations#index')}")Печатные Станции
+		li 
+			a Фотографии
+		li 
+			a О Проекте
+
+	div#main-container 
