Agent pool handshake and online status

--- a/app/views/templates/station.jade
+++ b/app/views/templates/station.jade
@@ -2,5 +2,12 @@
 	h3
 		=station.get("title") 
 		| 
-		span.label.label-success Онлайн
+
+		case station.get("online")
+			when true 
+				span.label.label-success Онлайн
+			default
+				span.label.label-warning Оффлайн
+
+
 	p.lead= station.get("description")
