Reorganized client-side code; Added stationEdit view

--- a/app/views/station/list/stationListItemTemplate.jade
+++ b/app/views/station/list/stationListItemTemplate.jade
@@ -1,13 +1,16 @@
 .station-item
 	h3
-		=station.get("title") 
+		a(href=jade.url('stations#show', { name : station.name }) )
+			=station.title 
 		| 
 
-		case station.get("online")
+		case station.online
 			when true 
 				span.label.label-success Онлайн
 			default
 				span.label.label-warning Оффлайн
 
+		
 
-	p.lead= station.get("description")
+
+	p.lead= station.description
