--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -5830,5 +5830,13 @@ td.visible-print {
 }
 /*# sourceMappingURL=bootstrap.css.map */
 
+.landing {
+	background-image : url("/images/wave.svg");
+	background-color : #E0D6AD;
+}
+
+.landing img {
+	margin: 0 auto;
+}
 
 /*# sourceMappingURL=app.css.map*/
