Protected station edit action

--- a/app/views/station/stationViewTemplate.jade
+++ b/app/views/station/stationViewTemplate.jade
@@ -9,7 +9,7 @@
 				span.label.label-warning Оффлайн
 
 	.btn-group
-		a.btn.btn-default(href=jade.url('stations#edit', {name : station.name}))
+		a.btn.btn-default(href=jade.url('station_edit', {name : station.name}))
 			span.glyphicon.glyphicon-pencil
 
 		button.btn.btn-default
