--- a/app/views/station/edit/stationEditTemplate.jade
+++ b/app/views/station/edit/stationEditTemplate.jade
@@ -1,7 +1,7 @@
 .form(role="form")
 	.form-group
 		label Название
-		input.form-control(type="text" value=station.title)
+		input.title-input.form-control(type="text" value=station.title)
 
 	.form-group
 		label Подзаголовок
@@ -16,5 +16,5 @@
 
 	.row
 		.col-md-4.col-md-offset-4
-			.btn.btn-primary.btn-lg.btn-block.save-button Сохранить
+			.login-button.btn.btn-primary.btn-lg.btn-block.save-button Сохранить
 
