--- a/app/views/station/list/stationListItemTemplate.jade
+++ b/app/views/station/list/stationListItemTemplate.jade
@@ -1,7 +1,7 @@
 .station-item
 	h3
 		a(href=jade.url('stations#show', { name : station.name }) )
-			=station.title 
+			= station.title 
 		| 
 
 		case station.online
@@ -10,7 +10,5 @@
 			default
 				span.label.label-warning Оффлайн
 
-		
 
-
-	p.lead= station.description
+	p.lead= station.subtitle
