--- a/app/views/about/aboutViewTemplate.jade
+++ b/app/views/about/aboutViewTemplate.jade
@@ -1,4 +1,36 @@
-.jumbotron.text-center.landing
-	h1 #steviewhale
-	p Моментальная печать фотографий из Instagram
-	img.img-responsive(src="/images/stevie.svg")
+.text-center
+	.row
+		.landing.col-md-12
+			h1 #steviewhale
+			p.lead Моментальная печать фотографий из Instagram
+			img.img-responsive(src="/images/stevie.svg")
+			
+			h2 Привет, друг! 
+			.row
+				.col-md-6.col-md-offset-3				
+					p.lead 
+						| Меня зовут Стиви! Я большой фиолетовый кит.
+	.row
+		.how-it-works.col-md-12
+			h1 Как это работает?
+			.row
+				.col-md-4
+					.super-icon.glyphicon.glyphicon-camera(style="color:#633B75")
+					h3 Публикуйте
+					p.lead
+						| Опубликуйте фотографию в Instagram
+						| с хештегом #steviewhale
+				.col-md-4
+					.super-icon.glyphicon.glyphicon-print(style="color:#355E75")
+					h3 Печатайте
+					p.lead
+						| Фотография сразу же напечатается на одной
+						| из печатных станций, которые предоставляются
+						| добряками.
+				.col-md-4
+					.super-icon.glyphicon.glyphicon-heart(style="color:#EC739A")
+					h3 Забирайте
+					p.lead
+						| Заберите фотографию с печатной станции. Не забудьте поблагодарить
+						| владельца! Можно сказать "спасибо", спеть песенку, а можно просто душевно
+						| обнять этого благородного человека!  
