--- a/app/views/site/siteViewTemplate.jade
+++ b/app/views/site/siteViewTemplate.jade
@@ -1,4 +1,4 @@
-.container-fluid
+.container-fluid.site-container
 	ul.nav.nav-pills
 		li 
 			a(href=jade.url("static#about"))
@@ -13,4 +13,4 @@
 				span.glyphicon.glyphicon-camera
 				|  Фотографии
 
-	div#main-container 
+	#main-container 
