--- a/app/views/about/aboutView.css
+++ b/app/views/about/aboutView.css
@@ -3,6 +3,22 @@
 	background-color : #E0D6AD;
 }
 
+
+.how-it-works {
+	background-color: #6FB6A2;
+}
+
+.landing .jumbotron {
+	background: none;
+}
+
+.super-icon {
+	font-size: 85px;
+	width : 100px;
+	height: 100px;
+	line-height: 100px;
+}
+
 .landing img {
 	margin: 0 auto;
 }
