--- a/app/views/auth/loginViewTemplate.jade
+++ b/app/views/auth/loginViewTemplate.jade
@@ -1,8 +1,8 @@
 
-.row
+.row.text-center
+	h2 Упс! Здесь нужно авторизоваться
 	.col-md-4.col-md-offset-4
 		form.login-form(role="form")
-			h2 Авторизация
 			.form-group.form-group-lg
 				input.login-field.form-control(type="text" placeholder="Логин")
 				input.password-field.form-control(type="password" placeholder="Пароль")
