--- a/app/views/station/stationViewTemplate.jade
+++ b/app/views/station/stationViewTemplate.jade
@@ -9,13 +9,35 @@
 				span.label.label-warning Оффлайн
 		
 	h2 
-		small= station.subtitle	
-	.btn-group
-		a.btn.btn-default(href=jade.url('station_edit', {name : station.name}))
-			span.glyphicon.glyphicon-pencil
-			|  Редактировать
+		
+		.btn-group.btn-group-sm
+			button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
+				span.glyphicon.glyphicon-cog
+				| 
+				span.caret
+			ul.dropdown-menu(role="menu")
+				li
+					a.edit-button(href=jade.url('station_edit', {name : station.name}))
+						span.glyphicon.glyphicon-pencil
+						|  Редактировать
 
-		button.btn.btn-default
-			span.glyphicon.glyphicon-remove
-			|  Удалить
+				li
+					a.delete-button(href="#" data-toggle="modal" data-target=".delete-modal")
+						span.glyphicon.glyphicon-remove
+						|  Удалить
+		| 
+		small= station.subtitle
+
 	p.lead!= jade.markdown(station.description)
+
+.modal.delete-modal(tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true")
+	.modal-dialog.modal-sm
+		.modal-content
+			.modal-header
+				h4.modal-title Удалить станцию?
+			.modal-body
+				| Внимательно подумайте перед удалением станции, возможно, она вам 
+				| еще пригодится!	
+			.modal-footer.text-center
+				button.delete-confirm-button.btn.btn-primary Да!
+				button.btn.btn-default(data-dismiss="modal") Нет, я передумал.
