--- a/app/views/about/aboutViewTemplate.jade
+++ b/app/views/about/aboutViewTemplate.jade
@@ -15,20 +15,20 @@
 			h1 Как это работает?
 			.row
 				.col-md-4
-					.super-icon.glyphicon.glyphicon-camera(style="color:#633B75")
+					.super-icon.glyphicon.glyphicon-camera
 					h3 Публикуйте
 					p.lead
 						| Опубликуйте фотографию в Instagram
 						| с хештегом #steviewhale
 				.col-md-4
-					.super-icon.glyphicon.glyphicon-print(style="color:#355E75")
+					.super-icon.glyphicon.glyphicon-print
 					h3 Печатайте
 					p.lead
 						| Фотография сразу же напечатается на одной
 						| из печатных станций, которые предоставляются
 						| добряками.
 				.col-md-4
-					.super-icon.glyphicon.glyphicon-heart(style="color:#EC739A")
+					.super-icon.glyphicon.glyphicon-heart
 					h3 Забирайте
 					p.lead
 						| Заберите фотографию с печатной станции. Не забудьте поблагодарить
