Better update in stationController (change name still doesn't work):

--- a/app/views/site/siteViewTemplate.jade
+++ b/app/views/site/siteViewTemplate.jade
@@ -13,4 +13,9 @@
 				span.glyphicon.glyphicon-camera
 				|  Фотографии
 
+		li 
+			a(href="#{jade.url('auth_login')}")
+				span.glyphicon.glyphicon-camera
+				|  Войти
+
 	#main-container 
