--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -5846,7 +5846,7 @@ td.visible-print {
 
 .super-icon {
 	color : #EB3E61;
-	font-size: 85px;
+	font-size: 60px;
 	width : 100px;
 	height: 100px;
 	line-height: 100px;
@@ -5855,5 +5855,33 @@ td.visible-print {
 .landing img {
 	margin: 0 auto;
 }
+.login-form {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.logo-container {
+  padding: 2em;
+}
+
+.login-form .form-control {
+  text-align: center;
+  position: relative;
+  font-size: 16px;
+  height: auto;
+  padding: 10px;
+}
+
+.login-form input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.login-form input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
 
 /*# sourceMappingURL=app.css.map*/
