--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -1,37 +1,36 @@
-.text-center
-	.row
-		.landing.col-md-12
-			h1 #steviewhale
-			p Моментальная печать фотографий из Instagram
-			img.img-responsive(src="/images/stevie.svg")
-			
-			h2 Привет, друг! 
+.row.landing.text-center
+	.col-md-12
+		h1 #steviewhale
+		p Моментальная печать фотографий из Instagram
+		img.img-responsive(src="/images/stevie-kid.svg")
+		
+		h2 Привет, друг! 
+		.row
+			.col-md-6.col-md-offset-3				
+				p.lead 
+					| Меня зовут Стиви! Я большой фиолетовый кит.
+.row.how-it-works.text-center
+	.col-md-12
+		.container
+			h1 Как это работает?
 			.row
-				.col-md-6.col-md-offset-3				
-					p.lead 
-						| Меня зовут Стиви! Я большой фиолетовый кит.
-	.row
-		.how-it-works.col-md-12
-			.container
-				h1 Как это работает?
-				.row
-					.col-md-4
-						.super-icon.glyphicon.glyphicon-camera
-						h3 Публикуйте
-						p
-							| Опубликуйте фотографию в Instagram
-							| с хештегом #steviewhale
-					.col-md-4
-						.super-icon.glyphicon.glyphicon-print
-						h3 Печатайте
-						p
-							| Фотография сразу же напечатается на одной
-							| из печатных станций, которые предоставляются
-							| добряками.
-					.col-md-4
-						.super-icon.glyphicon.glyphicon-heart
-						h3 Забирайте
-						p
-							| Заберите фотографию с печатной станции. Не забудьте поблагодарить
-							| владельца! Можно сказать "спасибо", спеть песенку, а можно просто душевно
-							| обнять этого благородного человека!  
+				.col-md-4
+					.super-icon.glyphicon.glyphicon-camera
+					h3 Публикуйте
+					p
+						| Опубликуйте фотографию в Instagram
+						| с хештегом #steviewhale
+				.col-md-4
+					.super-icon.glyphicon.glyphicon-print
+					h3 Печатайте
+					p
+						| Фотография сразу же напечатается на одной
+						| из печатных станций, которые предоставляются
+						| добряками.
+				.col-md-4
+					.super-icon.glyphicon.glyphicon-heart
+					h3 Забирайте
+					p
+						| Заберите фотографию с печатной станции. Не забудьте поблагодарить
+						| владельца! Можно сказать "спасибо", спеть песенку, а можно просто душевно
+						| обнять этого благородного человека!  
