--- a/app/views/auth/loginView_.jade
+++ b/app/views/auth/loginView_.jade
@@ -2,7 +2,7 @@
 form.text-center.login-form(role="form")
 	h2 Вумпс! Авторизуйтесь
 	.logo-container
-		img.img-responsive(src="/images/stevie.svg")
+		img.img-responsive(src="/images/stevie-kid.svg")
 	.form-group.form-group-lg
 		input.login-field.form-control(type="text" placeholder="Логин")
 		input.password-field.form-control(type="password" placeholder="Пароль")
