--- a/app/views/site/siteView_.jade
+++ b/app/views/site/siteView_.jade
@@ -3,15 +3,15 @@ nav.navbar.navbar-inverse.navbar-static-top(role="navigation")
 		ul.nav.navbar-nav
 			li
 				a(href=jade.url("static#about"))
-					span.glyphicon.glyphicon-home
+					//- span.glyphicon.glyphicon-home
 					|  О Проекте
 			li 
 				a(href="#{jade.url('stations#index')}")
-					span.glyphicon.glyphicon-print 
+					//- span.glyphicon.glyphicon-print 
 					|  Печатные Станции
 			li 
 				a(href="#{jade.url('shots#index')}")
-					span.glyphicon.glyphicon-camera
+					//- span.glyphicon.glyphicon-camera
 					|  Фотографии
 
 		ul.nav.navbar-nav.navbar-right
