--- a/app/views/station/list/stationListView_.jade
+++ b/app/views/station/list/stationListView_.jade
@@ -3,7 +3,7 @@
 	.row
 		.col-md-12
 			if jade.auth()
-				a.btn.btn-default(href=jade.url("station_create") ) Зарегистрировать Станцию
+				a.btn.btn-success(href=jade.url("station_create") ) Зарегистрировать
 
 			.loading-container
 				h2 Загрузка
