--- a/app/views/shot/grid/item/shotGridItemView.css
+++ b/app/views/shot/grid/item/shotGridItemView.css
@@ -5,15 +5,16 @@
 .polaroid {
 	margin: 10px 5px 10px 10px;
 	padding: 15px;
-	width : 230px;
-	height : 260px;
+	width : 280px;
+	height : 320px;
 
 	box-shadow: 0px 1px 5px #888888;
 }
 
 .polaroid-photo {
-	width : 200px;
-	height : 200px;
+	width : 250px;
+	height : 250px;
 	background-size: cover;
+	margin-bottom: 15px;
 
 }
