--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -5800,7 +5800,7 @@ button.close {
 }
 
 .super-icon {
-	color : #3E6372;
+	color : rgba(206, 79, 90, 1);
 	font-size: 100px;
 	width : 100px;
 	height: 100px;
@@ -5845,18 +5845,21 @@ button.close {
 .polaroid {
 	margin: 10px 5px 10px 10px;
 	padding: 15px;
-	width : 230px;
-	height : 260px;
+	width : 280px;
+	height : 320px;
 
 	box-shadow: 0px 1px 5px #888888;
 }
 
 .polaroid-photo {
-	width : 200px;
-	height : 200px;
+	width : 250px;
+	height : 250px;
 	background-size: cover;
+	margin-bottom: 15px;
 
 }
+@import url(http://fonts.googleapis.com/css?family=Istok+Web:400,700|Russo+One|Exo+2:400,900,800,600,700,500,200,100,300);
+
 .navbar {
 	margin-bottom: 0 !important;
 }
