Added live streaming preview in sttation view

--- a/app/views/station/show/stationView_.jade
+++ b/app/views/station/show/stationView_.jade
@@ -28,6 +28,9 @@
 								|  Удалить
 			| 
 			small= station.subtitle
+		if station.streaming
+			h4 Прямой эфир
+			canvas.video-canvas(width="240" height="240")
 
 		p.lead!= jade.markdown(station.description)
 
