--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -5863,5 +5863,8 @@ button.close {
 .navbar {
 	margin-bottom: 0 !important;
 }
+.video-canvas {
+	border-radius : 240px;
+}
 
 /*# sourceMappingURL=app.css.map*/
