Global styling; Added Flatly bootsootstrap theme

--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -1,36 +1,34 @@
 .row.landing.text-center
 	.col-md-12
-		h1 #steviewhale
-		p Моментальная печать фотографий из Instagram
-		img.img-responsive(src="/images/stevie-kid.svg")
+		p.stevie-header #steviewhale		
+		img.stevie.img-responsive(src="/images/stevie-kid.svg")
 		
-		h2 Привет, друг! 
-		.row
-			.col-md-6.col-md-offset-3				
-				p.lead 
-					| Меня зовут Стиви! Я большой фиолетовый кит.
+		p.lead 
+			| Меня зовут Стиви! Я большой фиолетовый кит.
+			br
+			| Я печатаю фотографии в Ростове-на-Дону с хештегом #steviewhale
 .row.how-it-works.text-center
 	.col-md-12
 		.container
-			h1 Как это работает?
+			h1.hipster-header Как это работает?
 			.row
 				.col-md-4
 					.super-icon.glyphicon.glyphicon-camera
 					h3 Публикуйте
-					p
+					p.lead
 						| Опубликуйте фотографию в Instagram
 						| с хештегом #steviewhale
 				.col-md-4
 					.super-icon.glyphicon.glyphicon-print
 					h3 Печатайте
-					p
+					p.lead
 						| Фотография сразу же напечатается на одной
 						| из печатных станций, которые предоставляются
 						| добряками.
 				.col-md-4
 					.super-icon.glyphicon.glyphicon-heart
 					h3 Забирайте
-					p
+					p.lead
 						| Заберите фотографию с печатной станции. Не забудьте поблагодарить
 						| владельца! Можно сказать "спасибо", спеть песенку, а можно просто душевно
 						| обнять этого благородного человека!  
