--- a/app/views/auth/loginView_.jade
+++ b/app/views/auth/loginView_.jade
@@ -7,5 +7,5 @@ form.text-center.login-form(role="form")
 		input.login-field.form-control(type="text" placeholder="Логин")
 		input.password-field.form-control(type="password" placeholder="Пароль")
 
-	.login-button.btn.btn-lg.btn-primary.btn-block Войти
+	.login-button.btn.btn-lg.btn-success.btn-block Войти
 
