--- a/app/views/site/siteView.css
+++ b/app/views/site/siteView.css
@@ -1,5 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Istok+Web:400,700|Russo+One|Exo+2:400,900,800,600,700,500,200,100,300);
 
 .navbar {
+	font-size : 1.25em;
+	font-weight: 200;
 	margin-bottom: 0 !important;
 }
