--- a/app/views/site/siteView_.jade
+++ b/app/views/site/siteView_.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-inverse.navbar-static-top(role="navigation")
+nav.navbar.navbar-default.navbar-static-top(role="navigation")
 	.container
 		ul.nav.navbar-nav
 			li
