Added FontAwesome instead of Glyphicons

--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -13,20 +13,20 @@
 			h1.hipster-header Как это работает?
 			.row
 				.col-md-4
-					.super-icon.glyphicon.glyphicon-camera
+					i.super-icon.fa.fa-camera-retro
 					h3 Публикуйте
 					p.lead
 						| Опубликуйте фотографию в Instagram
 						| с хештегом #steviewhale
 				.col-md-4
-					.super-icon.glyphicon.glyphicon-print
+					i.super-icon.fa.fa-print
 					h3 Печатайте
 					p.lead
 						| Фотография сразу же напечатается на одной
 						| из печатных станций, которые предоставляются
 						| добряками.
 				.col-md-4
-					.super-icon.glyphicon.glyphicon-heart
+					i.super-icon.fa.fa-heart
 					h3 Забирайте
 					p.lead
 						| Заберите фотографию с печатной станции. Не забудьте поблагодарить
