--- a/app/views/shot/grid/item/shotGridItemView_.jade
+++ b/app/views/shot/grid/item/shotGridItemView_.jade
@@ -1,20 +1,20 @@
 .polaroid
-	.polaroid-photo(style="background-image:url(#{shot.thumbnail})")
+  .polaroid-photo(style="background-image:url(#{shot.thumbnail})")
 
-	span.glyphicon.glyphicon-map-marker
-		
-	case shot.status
-		when "failed"
-			span Ошибка
-		when "printed"
-			span Напечатана
-		when "queued"
-			span В очереди
-		default 
-			span Необработана
+  i.fa.fa-camera
 
-	if jade.auth()
-		.btn-group
-			if shot.status != "printed"
-				a.print-button.btn.btn-default.btn-sm: span.glyphicon.glyphicon-print
-			a.delete-confirm.btn.btn-default.btn-sm: span.glyphicon.glyphicon-remove
+  case shot.status
+    when "failed"
+      span Ошибка
+    when "printed"
+      span Напечатана
+    when "queued"
+      span В очереди
+    default 
+      span Необработана
+
+  if jade.auth()
+    .btn-group
+      if shot.status != "printed"
+        a.print-button.btn.btn-default.btn-sm: span.glyphicon.glyphicon-print
+      a.delete-confirm.btn.btn-default.btn-sm: span.glyphicon.glyphicon-remove
