Station view page

--- a/app/views/shot/grid/item/shotGridItemView_.jade
+++ b/app/views/shot/grid/item/shotGridItemView_.jade
@@ -16,5 +16,5 @@
   if jade.auth()
     .btn-group
       if shot.status != "printed"
-        a.print-button.btn.btn-default.btn-sm: span.glyphicon.glyphicon-print
-      a.delete-confirm.btn.btn-default.btn-sm: span.glyphicon.glyphicon-remove
+        a.print-button.btn.btn-default.btn-sm: i.fa.fa-print
+      a.delete-confirm.btn.btn-default.btn-sm: i.fa.fa-trash-o
