--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -15,7 +15,8 @@
           h3 Публикуйте
           p.lead
             | Выложите фотографию в Instagram
-            | с хештегом #steviewhale
+            | с хештегом 
+            a(href=jade.url('shots#index')) #steviewhale
         .col-md-4.icon-content
           img.super-icon.img-responsive(src="/images/print.svg")
           h3 Печатайте
@@ -27,3 +28,10 @@
           h3 Забирайте
           p.lead
             | Свяжитесь с владельцем станции, чтобы забрать фотографию
+.row.footer
+  .col-md-12.text-center
+    | Проект &laquo;StevieWhale&raquo;, 2014
+    br 
+    small Свяжитесь с 
+      a(href="http://molefrog.com") Лешей
+      | , если у вас возникли вопросы
