--- a/app/views/about/aboutView.css
+++ b/app/views/about/aboutView.css
@@ -4,6 +4,13 @@
   padding: 1.5em;
 }
 
+.footer {
+    background-color : #34495e;
+    color : #C0c0c0;
+    padding: 1em;
+    font-size: 0.9em;
+}
+
 .stevie-header {
   font-family: 'BebasNeueCyrillic';
   font-size: 5em;
