--- a/app/views/shot/grid/shotGridView_.jade
+++ b/app/views/shot/grid/shotGridView_.jade
@@ -4,8 +4,5 @@
     button.load-button.btn.btn-success 
       i.fa.fa-cloud-download
       |  Подгрузить
-  .row
-    .col-md-12
-
-      .shot-grid
+  .row.shot-grid
 
