--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -2849,24 +2849,37 @@ h1.hipster-header {
 }
 
 .shot-grid-item {
-  display: inline-block;
+  padding: 5px;
 }
 
 .polaroid {
-  margin: 10px 5px 10px 10px;
-  padding: 15px;
-  width : 280px;
-  height : 320px;
+  margin: 0;
+  margin-bottom: 5px;
+  
+  padding: 5%;
+  border-radius: 3px;
+  border: 1px solid #BDC2CC;
+}
 
-  box-shadow: 0px 1px 5px #888888;
+.photo-user {
+  font-size: 0.85em;
+}
+
+.photo-user a {
+  color : #555555;
+}
+.photo-user small {
+  color : #888888;
+}
+
+.photo-status {
+
+  margin: 0.3em 0;
 }
 
 .polaroid-photo {
-  width : 250px;
-  height : 250px;
-  background-size: cover;
-  margin-bottom: 15px;
-
+  width: 100%;
+  margin-bottom: 5px;
 }
 
 @import url(http://fonts.googleapis.com/css?family=Istok+Web:400,700|Russo+One|Exo+2:400,900,800,600,700,500,200,100,300);
