--- a/app/views/shot/show/shotView_.jade
+++ b/app/views/shot/show/shotView_.jade
@@ -1,6 +1,3 @@
 .container
   .row
-
-    img.img-rounded(src="#{ shot.attributes.image }" width=400 height=400)
-
-    p.lead Опубликовано #{shot.attributes.instagram.user.username}
+    img.img-responsive.img-rounded.shot-image(src="#{ shot.image }")
