--- a/app/views/auth/loginView_.jade
+++ b/app/views/auth/loginView_.jade
@@ -3,9 +3,10 @@ form.text-center.login-form(role="form")
   h2 Вумпс! Авторизуйтесь
   .logo-container
     img.img-responsive(src="/images/stevie-kid.svg")
-  .form-group.form-group-lg
-    input.login-field.form-control(type="text" placeholder="Логин")
-    input.password-field.form-control(type="password" placeholder="Пароль")
+  form(action="javascript:void(0)")
+    .form-group.form-group-lg
+      input.login-field.form-control(type="text" placeholder="Логин")
+      input.password-field.form-control(type="password" placeholder="Пароль")
 
-  .login-button.btn.btn-lg.btn-success.btn-block Войти
+    button.login-button.btn.btn-lg.btn-success.btn-block(type="submit") Войти
 
