--- a/app/views/station/show/stationView_.jade
+++ b/app/views/station/show/stationView_.jade
@@ -42,8 +42,11 @@
       h4 Прямой эфир
       canvas.video-canvas(width="240" height="240")
     h3 Как забирать фотографии с этой станции?
-    p!= jade.markdown(station.instructions)
-    p!= jade.markdown(station.description)
+    
+    .markdown
+      != jade.markdown(station.instructions)
+    .markdown
+      != jade.markdown(station.description)
 
   .modal.delete-modal(tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true")
     .modal-dialog.modal-sm
