--- a/app/views/about/aboutView.css
+++ b/app/views/about/aboutView.css
@@ -1,12 +1,12 @@
 .landing {
   background-image : url("/images/wave.svg");
-  background-color : #8FC9BD;
+  background-color : #97C4D3;//#afd9dd;//#8FC9BD;
   padding: 1.5em;
 }
 
 .footer {
     background-color : #34495e;
-    color : #C0c0c0;
+    color : #D1DAE4;
     padding: 1em;
     font-size: 0.9em;
 }
@@ -21,6 +21,7 @@
 
   text-shadow: 0px 3px #56AFD1;
 }
+
 img.stevie {
 }
 
@@ -41,13 +42,14 @@ img.stevie {
 }
 
 h1.hipster-header {
-  color:#DADADA;
+  color: #F3F3F3;
   font-family: 'BebasNeueCyrillic';
 }
 
 .how-it-works .lead {
   font-size: 1.2em;
-  color : #c4c4c4;
+  font-weight: 100;
+  color : #eeeeee;
 }
 
 .super-icon {
